--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body{
   align-items:center;
   color:white;
   padding:20px;
-  overflow:hidden;
+  overflow-x:hidden;
 }
 
 /* فيديو الخلفية */
@@ -47,6 +47,7 @@ body{
   text-align:center;
   max-width:800px;
   width:100%;
+  padding:10px;
 }
 
 /* الصورة */
@@ -73,7 +74,7 @@ body{
 }
 
 h1{
-  font-size:clamp(26px,5vw,42px);
+  font-size:clamp(26px,6vw,42px);
   margin-bottom:20px;
   text-shadow:0 0 15px white;
 }
@@ -82,13 +83,14 @@ h1{
 .links{
   display:flex;
   flex-direction:column;
-  gap:20px;
+  gap:15px;
+  padding:0 5px;
 }
 .card{
   display:flex;
   align-items:center;
-  gap:18px;
-  padding:18px;
+  gap:15px;
+  padding:15px;
   border-radius:20px;
   text-decoration:none;
   color:white;
@@ -101,7 +103,7 @@ h1{
   box-shadow:0 0 50px white;
 }
 .card img{
-  width:clamp(50px,10vw,70px);
+  width:clamp(40px,12vw,70px);
   filter:drop-shadow(0 0 10px white);
 }
 
@@ -110,12 +112,12 @@ h1{
 .youtube{border-left:6px solid #FF0000}
 .tiktok{border-left:6px solid #000}
 
-.text h3{font-size:clamp(16px,4vw,24px)}
-.text p{font-size:clamp(13px,3.5vw,15px);opacity:.9}
+.text h3{font-size:clamp(14px,4vw,22px)}
+.text p{font-size:clamp(12px,3.5vw,16px);opacity:.9}
 
 /* عداد الزوار */
 .counter{
-  margin-top:35px;
+  margin-top:25px;
   font-size:clamp(16px,4vw,20px);
   text-shadow:0 0 15px purple;
   animation:counterGlow 2s infinite alternate;
@@ -128,12 +130,13 @@ h1{
 
 /* كأس إفريقيا مع حركة صعود وهبوط */
 .africa-cup{
-  margin-top:25px;
+  margin-top:20px;
   display:flex;
   justify-content:center;
 }
 .africa-cup img{
-  width:140px;
+  width:120px;
+  max-width:40vw;
   animation:cupGlow 2.5s infinite alternate, cupMove 3s ease-in-out infinite alternate;
   filter:drop-shadow(0 0 15px gold) drop-shadow(0 0 30px orange);
 }
@@ -147,6 +150,32 @@ h1{
   0%{transform:translateY(0) scale(1)}
   50%{transform:translateY(-15px) scale(1.08)}
   100%{transform:translateY(0) scale(1)}
+}
+
+/* تحسينات للهاتف */
+@media (max-width:600px){
+  .avatar{
+    width:120px;
+    height:120px;
+  }
+  h1{
+    font-size:clamp(22px,8vw,36px);
+  }
+  .card{
+    gap:10px;
+    padding:12px;
+  }
+  .card img{
+    width:clamp(35px,15vw,60px);
+  }
+  .text h3{font-size:clamp(13px,5vw,20px)}
+  .text p{font-size:clamp(11px,4vw,14px)}
+  .counter{
+    font-size:clamp(14px,5vw,18px);
+  }
+  .africa-cup img{
+    width:100px;
+  }
 }
 </style>
 </head>
